@@ -74,6 +74,7 @@ struct poptOption coptions[] =
     {"unknown", 0, POPT_ARG_NONE, NULL, OPT_UNKNOWN, gettext_noop("perform the operations for unknown files from workspace"), NULL},
     {"key-to-push", 0, POPT_ARG_STRING, &argstr, OPT_KEY_TO_PUSH, gettext_noop("push the specified key even if it hasn't signed anything"), NULL},
     {"drop-attr", 0, POPT_ARG_STRING, &argstr, OPT_DROP_ATTR, gettext_noop("when rosterifying, drop attrs entries with the given key"), NULL},
+    {"no-files", 0, POPT_ARG_NONE, NULL, OPT_NO_FILES, gettext_noop("exclude files when printing logs"), NULL},
     { NULL, 0, 0, NULL, 0, NULL, NULL }
   };
 
@@ -517,6 +518,10 @@ cpp_main(int argc, char ** argv)
 
             case OPT_DROP_ATTR:
               app.attrs_to_drop.insert(string(argstr));
+              break;
+
+            case OPT_NO_FILES:
+              app.no_files = true;
               break;
 
             case OPT_HELP:
