@@ -4139,26 +4139,37 @@ copy.  Specifying only the pathname "." will restrict @command{status}
 to files changed within the current subdirectory of the workspace.
 
 @item monotone log
-@itemx monotone log [--last=@var{n}] [--revision=@var{id} [...]] [--brief] [--merges] [@var{file} [...]]
+@itemx monotone log [--last=@var{n}] [--next=@var{n}] [--revision=@var{id} [...]] [--brief] [--merges] [--no-files] [--diffs] [@var{file} [...]]
 
 This command prints out a log, in reverse-ancestry order, of small
 history summaries.  Each summary contains author, date, changelog and
-comment information associated with a revision.  
+comment information associated with a revision.
 
 If @code{--brief} is given, the output consists of one line per revision
 with the revision ID, the author, the date and the branches (separated
 with commas).
 
-If @code{--last=}@var{n} is given, at most that many log entries will be
+If @code{--last=}@var{n} is given, at most @var{n} log entries will be
 given.
 
-By default, the log entries for merge nodes are not shown; usually they
-don't contain much interesting information. If @code{--merges} is given,
-the log entries for these nodes will be included.
+If @code{--next=}@var{n} is given, at most @var{n} log entries towards
+the current head revision will be given from the workspace's base
+revision in forward-ancestry order.  This is useful to review changes
+that will be applied to the workspace when @command{update} is run.
+
+By default, the log entries for merge nodes are not shown; usually
+they don't contain much interesting information. If @code{--merges} is
+given, the log entries for these nodes will be included.
+
+If @code{--no-files} is given, the log output excludes the list of
+files changed in each revision.
+
+Specifying @code{--diffs} causes the log output to include a unified
+diff of the changes in each revision.
 
 If one or more revision IDs are given, the command starts tracing back
-through history from these revisions, otherwise it starts from the base
-revision of your workspace.
+through history from these revisions, otherwise it starts from the
+base revision of your workspace.
 
 If one or more files are given, the command will only log the revisions
 where those files are changed.
