@@ -51,3 +51,4 @@
 #define OPT_KEY_TO_PUSH 42
 #define OPT_CONF_DIR 43
 #define OPT_DROP_ATTR 44
+#define OPT_NO_FILES 45
